# glibcmock

./: CMakeLists.txt  README.md
cmake/: Config.cmake.in
test/: CMakeLists.txt  Makefile  test_main.cc
